# shopify-fall-2021

./: DIRECTORY.md  README.md
backend/: .coverage  pyproject.toml  requirements.txt  setup.cfg
backend/app/: .coverage  aws.py  db.py  main.py  models.py  request.py  security.py
backend/app/controllers/: add.py  create_user.py  delete.py  my_images.py  my_info.py  root.py  search.py
backend/app/models/: images.py  users.py
backend/app/templates/: images.html  search_results.html
backend/app/tests/: .coverage  add.py  create_user.py  delete.py  my_images.py  my_info.py  root.py  search.py
backend/app/tests/failed-tests/: my_images.py
