[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Adib234 <adibadib42@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pytest-asyncio = "^0.15.1"
httpx = "^0.18.0"
asyncpg = "^0.22.0"
SQLAlchemy = {extras = ["1.3"], version = "< 1.4"}
databases = "^0.4.3"
psycopg2 = "^2.8.6"
coverage = "^5.5"
python-multipart = "^0.0.5"
boto3 = "^1.17.62"
aiofiles = "^0.6.0"
requests = "^2.25.1"
Jinja2 = "^2.11.3"
alembic = "^1.6.0"
pyOpenSSL = "^20.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
